src/themes/default/src/scss/_multiselect-2.scss
/* ... */
// Animation keyframes
@keyframes ss-valueIn {
  0% {
    transform: scale(0);
    opacity: 0;
  }
  100% {
    transform: scale(1);
    opacity: 1;
  }
}
@keyframes ss-valueOut {
  0% {
    transform: scale(1);
    opacity: 1;
  }
  100% {
    transform: scale(0);
    opacity: 0;
  }
}

// Misc classes
.ss-hide {
  display: none !important;
}

// Main container
.ss-main.ss-2 {
  display: flex;
  flex-direction: row;
  position: relative;
  user-select: none;
  color: var(--ss-font-color);
  width: 100%;
  padding: 0.075rem 0 0.075rem 0.3rem;
  cursor: pointer;
  border: 1px solid var(--ss-border-color);
  border-radius: var(--ss-border-radius);
  background-color: var(--ss-bg-color);
  outline: 0;
  box-sizing: border-box;
  transition: background-color var(--ss-animation-timing);
  overflow: hidden;
  min-height: 38px;

  &:focus {
    box-shadow: 0 0 5px var(--ss-focus-color);
  }

  &.ss-disabled {
    background-color: var(--ss-disabled-color);
    cursor: not-allowed;

    .ss-values {
      .ss-disabled {
        color: var(--ss-font-color);
      }

      .ss-value {
        .ss-value-delete {
          cursor: not-allowed;
        }
      }
    }
  }

  &.ss-open-above {
    border-top-left-radius: 0px;
    border-top-right-radius: 0px;
  }
  &.ss-open-below {
    border-bottom-left-radius: 0px;
    border-bottom-right-radius: 0px;
  }

  .ss-values {
    display: inline-flex;
    flex-wrap: wrap;
    gap: var(--ss-spacing-m);
    flex: 1 1 100%;

    .ss-placeholder {
      display: flex;
      padding: var(--ss-spacing-s) var(--ss-spacing-m) var(--ss-spacing-s)
        var(--ss-spacing-m);
      margin: auto 0px auto 0px;
      line-height: 1em;
      align-items: center;
      width: 100%;
      color: var(--ss-font-placeholder-color);
      overflow: hidden;
      text-overflow: ellipsis;
      white-space: nowrap;
    }

    // Max is used to display max number of values
    .ss-max {
      display: flex;
      user-select: none;
      align-items: center;
      width: fit-content;
      font-size: 12px;
      color: var(--ss-bg-color);
      line-height: 1;
      padding: var(--ss-spacing-s) var(--ss-spacing-m);
      background-color: $primary;
      border-radius: var(--ss-border-radius);
    }

    // Used for single select selected value
    .ss-single {
      display: flex;
      margin: auto 0px auto var(--ss-spacing-s);
    }

    // Used for the selected values
    .ss-value {
      display: flex;
      user-select: none;
      align-items: center;
      width: fit-content;
      background-color: $primary;
      border-radius: var(--ss-border-radius);
      animation-name: ss-valueIn;
      animation-duration: var(--ss-animation-timing);
      animation-timing-function: ease-out;
      animation-fill-mode: both;
      margin: 3px 5px 3px 0;
      padding: 0.35em 1.25rem 0.35em 0.65em;

      &.ss-value-out {
        animation-name: ss-valueOut;
        animation-duration: var(--ss-animation-timing);
        animation-timing-function: ease-out;
      }

      .ss-value-text {
        color: var(--ss-bg-color);
        line-height: 1;
        margin-right: 5px;
      }

      .ss-value-delete {
        font-size: 0;
        &:after {
          background-image: url("data:image/svg+xml,%3Csvg width='16' height='17' viewBox='0 0 16 17' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M16 8.5C16 12.9183 12.4183 16.5 8 16.5C3.58172 16.5 0 12.9183 0 8.5C0 4.08172 3.58172 0.5 8 0.5C12.4183 0.5 16 4.08172 16 8.5ZM5.35355 5.14645C5.15829 4.95118 4.84171 4.95118 4.64645 5.14645C4.45118 5.34171 4.45118 5.65829 4.64645 5.85355L7.29289 8.5L4.64645 11.1464C4.45118 11.3417 4.45118 11.6583 4.64645 11.8536C4.84171 12.0488 5.15829 12.0488 5.35355 11.8536L8 9.20711L10.6464 11.8536C10.8417 12.0488 11.1583 12.0488 11.3536 11.8536C11.5488 11.6583 11.5488 11.3417 11.3536 11.1464L8.70711 8.5L11.3536 5.85355C11.5488 5.65829 11.5488 5.34171 11.3536 5.14645C11.1583 4.95118 10.8417 4.95118 10.6464 5.14645L8 7.79289L5.35355 5.14645Z' fill='%23F8F9FA'/%3E%3C/svg%3E%0A");
          background-repeat: no-repeat;
          content: "";
          display: inline-block;
          height: 1rem;
          transform: scale(0.8) translateY(50%);
          width: 1rem;
          padding: 15px;
          background-position: 50%;
          border-radius: 50%;
          position: absolute;
          right: 0;
          bottom: calc(50% - 3px);
        }
        &:focus-visible {
          &:after {
            outline: 2px solid $white;
            outline-offset: -6px;
          }
        }
      }
    }
  }

  .ss-deselect {
    flex: 0 1 auto;
    display: flex;
    align-items: center;
    justify-content: center;
    width: fit-content;
    height: auto;
    padding: 0 var(--ss-spacing-m) 0 var(--ss-spacing-m);

    svg {
      width: 8px;
      height: 8px;

      path {
        fill: none;
        stroke: var(--ss-font-color);
        stroke-width: 20;
        stroke-linecap: round;
        stroke-linejoin: round;
      }
    }
  }

  .ss-arrow {
    flex: 0 1 auto;
    display: flex;
    align-items: center;
    justify-content: flex-end;
    width: 12px;
    height: 12px;
    margin: auto var(--ss-spacing-m) auto var(--ss-spacing-m);

    path {
      fill: none;
      stroke: var(--ss-font-color);
      stroke-width: 18;
      stroke-linecap: round;
      stroke-linejoin: round;
      transition-timing-function: ease-out;
      transition: var(--ss-animation-timing);
    }
  }
}
/* ... */

